force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Amended_Quote__c.field-meta.xml
<CustomField>
    <fullName>Amended_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test functionality for a selective checkbox to distinguish Amended quote records</description>
    <label>Amended Quote</label>
    <type>Checkbox</type>
</CustomField>