force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cloned_and_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cloned_and_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned and Cancelled</label>
    <type>Checkbox</type>
</CustomField>