force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cloned_Line__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing QCP clone line functionality from Custom Action</description>
    <label>Cloned Line</label>
    <type>Checkbox</type>
</CustomField>