force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_NetSuite_SerialNo__c.field-meta.xml
<CustomField>
    <fullName>CPQ_NetSuite_SerialNo__c</fullName>
    <label>Netsuite Serial No</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>