force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_Original_OrderItemNumber__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Original_OrderItemNumber__c</fullName>
    <label>Original Order Item Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>