force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_Previous_SerialNo__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Previous_SerialNo__c</fullName>
    <label>CPQ Previous SerialNo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>