force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Matching_ID__c.field-meta.xml
<CustomField>
    <fullName>Matching_ID__c</fullName>
    <description>Field to test matching ID clone quote line functionality from QCP/Custom Action</description>
    <label>Matching ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>