force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Original_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Original_Quantity__c</fullName>
    <label>Original Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>