force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Test_Twin_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Twin_Field__c</fullName>
    <label>Test Twin Field</label>
    <type>TextArea</type>
</CustomField>